--- a/index.html
+++ b/index.html
@@ -3,28 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <title>Micrositios Indicadores Querétaro</title>
+    <style>
+        /* Estilos para mejorar la presentación */
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+        h1 {
+            font-size: 2em;
+            margin-bottom: 30px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0 auto;
+            display: inline-block;
+            text-align: center;
+        }
+        li {
+            margin-bottom: 40px;
+        }
+        li a {
+            font-size: 1.5em;
+            text-decoration: none;
+            color: #000;
+        }
+        li img {
+            display: block;
+            margin: 10px auto;
+            width: 150px; /* Puedes ajustar el tamaño según necesites */
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <h1>Micrositios Indicadores Querétaro</h1>
     <ul>
-        <li><a href="paginas/22000_total_entidad.html">22000 Total Entidad</a></li>
-        <li><a href="paginas/22001_amealco_de_bonfil.html">22001 Amealco de Bonfil</a></li>
-        <li><a href="paginas/22002_pinal_de_amoles.html">22002 Pinal de Amoles</a></li>
-        <li><a href="paginas/22003_arroyo_seco.html">22003 Arroyo Seco</a></li>
-        <li><a href="paginas/22004_cadereyta_de_montes.html">22004 Cadereyta de Montes</a></li>
-        <li><a href="paginas/22005_colon.html">22005 Colón</a></li>
-        <li><a href="paginas/22006_corregidora.html">22006 Corregidora</a></li>
-        <li><a href="paginas/22007_ezequiel_montes.html">22007 Ezequiel Montes</a></li>
-        <li><a href="paginas/22008_huimilpan.html">22008 Huimilpan</a></li>
-        <li><a href="paginas/22009_jalpan_de_serra.html">22009 Jalpan de Serra</a></li>
-        <li><a href="paginas/22010_landa_de_matamoros.html">22010 Landa de Matamoros</a></li>
-        <li><a href="paginas/22012_pedro_escobedo.html">22012 Pedro Escobedo</a></li>
-        <li><a href="paginas/22013_penamiller.html">22013 Peñamiller</a></li>
-        <li><a href="paginas/22014_queretaro.html">22014 Querétaro</a></li>
-        <li><a href="paginas/22015_san_joaquin.html">22015 San Joaquín</a></li>
-        <li><a href="paginas/22016_san_juan_del_rio.html">22016 San Juan del Río</a></li>
-        <li><a href="paginas/22017_tequisquiapan.html">22017 Tequisquiapan</a></li>
-        <li><a href="paginas/22018_toliman.html">22018 Tolimán</a></li>
+        <li>
+            <a href="paginas/22000_total_entidad.html">22000 Total Entidad</a>
+            <img src="qr_codes/22000_total_entidad.svg" alt="QR Code for 22000 Total Entidad">
+        </li>
+        <li>
+            <a href="paginas/22001_amealco_de_bonfil.html">22001 Amealco de Bonfil</a>
+            <img src="qr_codes/22001_amealco_de_bonfil.svg" alt="QR Code for 22001 Amealco de Bonfil">
+        </li>
+        <li>
+            <a href="paginas/22002_pinal_de_amoles.html">22002 Pinal de Amoles</a>
+            <img src="qr_codes/22002_pinal_de_amoles.svg" alt="QR Code for 22002 Pinal de Amoles">
+        </li>
+        <li>
+            <a href="paginas/22003_arroyo_seco.html">22003 Arroyo Seco</a>
+            <img src="qr_codes/22003_arroyo_seco.svg" alt="QR Code for 22003 Arroyo Seco">
+        </li>
+        <li>
+            <a href="paginas/22004_cadereyta_de_montes.html">22004 Cadereyta de Montes</a>
+            <img src="qr_codes/22004_cadereyta_de_montes.svg" alt="QR Code for 22004 Cadereyta de Montes">
+        </li>
+        <li>
+            <a href="paginas/22005_colon.html">22005 Colón</a>
+            <img src="qr_codes/22005_colon.svg" alt="QR Code for 22005 Colón">
+        </li>
+        <li>
+            <a href="paginas/22006_corregidora.html">22006 Corregidora</a>
+            <img src="qr_codes/22006_corregidora.svg" alt="QR Code for 22006 Corregidora">
+        </li>
+        <li>
+            <a href="paginas/22007_ezequiel_montes.html">22007 Ezequiel Montes</a>
+            <img src="qr_codes/22007_ezequiel_montes.svg" alt="QR Code for 22007 Ezequiel Montes">
+        </li>
+        <li>
+            <a href="paginas/22008_huimilpan.html">22008 Huimilpan</a>
+            <img src="qr_codes/22008_huimilpan.svg" alt="QR Code for 22008 Huimilpan">
+        </li>
+        <li>
+            <a href="paginas/22009_jalpan_de_serra.html">22009 Jalpan de Serra</a>
+            <img src="qr_codes/22009_jalpan_de_serra.svg" alt="QR Code for 22009 Jalpan de Serra">
+        </li>
+        <li>
+            <a href="paginas/22010_landa_de_matamoros.html">22010 Landa de Matamoros</a>
+            <img src="qr_codes/22010_landa_de_matamoros.svg" alt="QR Code for 22010 Landa de Matamoros">
+        </li>
+        <li>
+            <a href="paginas/22012_pedro_escobedo.html">22012 Pedro Escobedo</a>
+            <img src="qr_codes/22012_pedro_escobedo.svg" alt="QR Code for 22012 Pedro Escobedo">
+        </li>
+        <li>
+            <a href="paginas/22013_penamiller.html">22013 Peñamiller</a>
+            <img src="qr_codes/22013_penamiller.svg" alt="QR Code for 22013 Peñamiller">
+        </li>
+        <li>
+            <a href="paginas/22014_queretaro.html">22014 Querétaro</a>
+            <img src="qr_codes/22014_queretaro.svg" alt="QR Code for 22014 Querétaro">
+        </li>
+        <li>
+            <a href="paginas/22015_san_joaquin.html">22015 San Joaquín</a>
+            <img src="qr_codes/22015_san_joaquin.svg" alt="QR Code for 22015 San Joaquín">
+        </li>
+        <li>
+            <a href="paginas/22016_san_juan_del_rio.html">22016 San Juan del Río</a>
+            <img src="qr_codes/22016_san_juan_del_rio.svg" alt="QR Code for 22016 San Juan del Río">
+        </li>
+        <li>
+            <a href="paginas/22017_tequisquiapan.html">22017 Tequisquiapan</a>
+            <img src="qr_codes/22017_tequisquiapan.svg" alt="QR Code for 22017 Tequisquiapan">
+        </li>
+        <li>
+            <a href="paginas/22018_toliman.html">22018 Tolimán</a>
+            <img src="qr_codes/22018_toliman.svg" alt="QR Code for 22018 Tolimán">
+        </li>
     </ul>
 </body>
 </html>
